# sheet-agent

./: .gitignore  README.md  README.zh.md  build.py
backend/: SheetAgent-backend.spec  config.yaml  requirements.txt  run.py
backend/app/: agent.py
backend/app/api/: server.py
backend/app/data/: __init__.py  cache.py  index.py  readers.py
backend/app/llm/: base.py  claude_provider.py  openai_provider.py  registry.py
backend/app/sandbox/: executor.py
backend/app/tools/: registry.py
backend/static/: app.js  style.css
desktop/: package-lock.json  package.json  vite.config.js
desktop/scripts/: build-backend.cjs
desktop/src/: app.js  i18n.js  index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
