[package]
name = "sheet-agent-desktop"
version = "1.0.0"
description = "SheetAgent Desktop - AI-powered spreadsheet automation"
authors = ["SheetAgent Team"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "net"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
